--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_KAKAO_API_KEY="adc31133965465cbd4e80445cd56d010"
 REACT_APP_KAKAO_REDIRECT_URI="http://localhost:3000/auth/kakao"
+REACT_APP_OPENAI_API_KEY="sk-None-Bgr0tiWo88MQl9OjyUBRT3BlbkFJkRz1MmDrGUZhhQ24CEjC"
